<resources>
    <string name="app_name">康链</string>
    <string name="name">康链(REAL_DOCTOR)</string>
    <string name="accessbiliityNo">请为App打开辅助功能开关！！</string>
    <string name="weibosdk_demo_toast_auth_success">授权成功</string>
    <string name="weibosdk_demo_toast_auth_failed">授权失败</string>
    <string name="weibosdk_demo_toast_auth_canceled">取消授权</string>
    <string name="weibosdk_demo_token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="weibosdk_demo_token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="__picker_title">图片</string>
    <string name="__picker_delete">删除</string>
    <string name="__picker_done">完成</string>
    <string name="__picker_done_with_count">完成(%1$d/%2$d)</string>
    <string name="__picker_image_index">%1$d/%2$d</string>
    <string name="__picker_undo">撤消</string>
    <string name="__picker_deleted_a_photo">删除了一张图片</string>
    <string name="__picker_confirm_to_delete">确认删除？</string>
    <string name="__picker_yes">确定</string>
    <string name="__picker_cancel">取消</string>
    <string name="__picker_all_image">所有图片</string>
    <string name="__picker_over_max_count_tips">你最多可以选择%1$d张图片</string>
    <string name="__picker_image_count">%1$d张</string>
    <string name="home_titile">睿医软件</string>
    <string name="home">首页</string>
    <string name="read">资讯</string>
    <string name="my">我的</string>
    <string name="hint_username">输入您的手机号</string>
    <string name="hint_password">输入您的密码</string>
    <string name="search_hint">搜索疾病、医生、医院</string>
    <string name="search_patient_hint">按患者姓名搜索 </string>
    <string name="second_function_one_string">皮肤病</string>
    <string name="second_function_two_string">慢性病</string>
    <string name="second_function_four_string">肿瘤病</string>
    <string name="second_function_three_string">血液病</string>
    <string name="second_function_five_string">婴幼儿疾病</string>
    <string name="second_function_six_string">妇科疾病</string>
    <string name="second_function_seven_string">口腔疾病</string>
    <string name="function_four_string">病友交流</string>
    <string name="function_one_string">病历归档</string>
    <string name="function_three_string">在线复诊</string>
    <string name="function_two_string">预约挂号</string>
    <string name="function_five_string">患者管理</string>
    <string name="function_six_string">患者教育</string>
    <string name="function_seven_string">远程医疗</string>
    <string name="function_eight_string">我的二维码</string>
    <string name="second_function_eight_string">更多疾病</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="hint_phone_register">请输入手机号</string>
    <string name="hint_verify_register">输入您的验证码</string>
    <string name="get_hint_verify_register">获取验证码</string>
    <string name="hint_password_register">输入您的密码</string>
    <string name="hint_confirm_password_register">确认您的密码</string>
    <string name="save_doc_ill">疾病名称</string>
    <string name="save_doc_hospital">就诊医院</string>
    <string name="save_doc_hospital_edit">请输入您就诊的医院名称</string>
    <string name="save_doc_doctor">就诊医生</string>
    <string name="save_doc_time">就诊时间</string>
    <string name="save_doc_text">描  述</string>
    <string name="save_doc_ill_edit">请输入您的疾病</string>
    <string name="save_doc_advice">请输入您对该病历的描述</string>
    <string name="save_doc_doctor_edit">请输入您的就诊医生</string>
    <string name="save_doc_save_btn">保存</string>
    <string name="confirm_btn">确认</string>
    <string name="shop">商城</string>
    <string name="more">更多 >></string>
    <string name="modify">修改</string>
    <string name="compare">病历对照</string>
    <string name="start_time">开始时间:</string>
    <string name="end_time">截止时间:</string>
    <string name="select_time_record">按时间选择病历</string>
    <string name="select_disease_record">按疾病选择病历</string>
    <string name="collection_pull_to_refresh">下拉刷新</string>
    <string name="collection_release_refresh">释放刷新</string>
    <string name="collection_refresh_done">刷新完成</string>
    <string name="collection_refreshing">正在刷新...</string>
    <string name="collection_last_refresh_time">上次更新时间：</string>
    <string name="collection_loading_more">正在加载...</string>
    <string name="collection_no_more_data">没有更多数据</string>
    <string name="comprehensive_ranking">综合排序</string>
    <string name="screen">筛选</string>
    <string name="buy">立即购买</string>
    <string name="shopcart">购物车</string>
    <string name="inshopcart">加入购物车</string>
    <string name="productname">商品名称</string>
    <string name="company">供应商</string>
    <string name="description">详情</string>
    <string name="price">价格</string>
    <string name="property">属性</string>
    <string name="shop_title">购物车(%s)</string>
    <string name="count_money">合计：￥%s</string>
    <string name="count_goods">结算（%s）</string>
    <string name="edit">编辑</string>
    <string name="pay_result_tip">微信</string>
    <string name="pay_price">支付总额</string>
    <string name="pay_product">商品列表</string>
    <string name="address">收货地址</string>
    <string name="input_address">请选择收货地址</string>
    <string name="pay">支付</string>
    <string name="notification_recording">正在录音...</string>
    <string name="no_saved_recordings_message">No saved recordings</string>
    <string name="pause_recording_button">暂停</string>
    <string name="resume_recording_button">继续</string>
    <string name="default_file_name">My Recording</string>
    <string name="record_prompt">点击按钮开始录音</string>
    <string name="record_in_progress">正在录音</string>
    <string name="toast_recording_finish">Recording saved to</string>
    <string name="toast_file_delete">%1$s successfully deleted</string>
    <string name="toast_file_exists">The file %1$s already exists. Please choose a different file name.</string>
    <string name="glide_plus_icon_string">android.resource://</string>
    <string name="post_delete_tv_d">拖动到此处，进行删除</string>
    <string name="post_delete_tv_s"> 放开手指，进行删除</string>
    <string name="record_image_edit">请输入您所要表达的信息</string>
    <string name="image_card_replace_image">替换图片</string>
    <string name="image_card_delete_recipel">删除处方</string>
    <string name="image_card_add_advice">添加/更改备注</string>
    <string name="record_images_label">添加标签</string>
    <string name="add_record">添加病历</string>
    <string name="location">定位中</string>
    <string name="notifyTitle">提示</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="order_expert">预约</string>
    <string name="order_by_name">按专家预约</string>
    <string name="order_by_date">按日期预约</string>
    <string name="hospital">医院</string>
    <string name="expert">医生</string>
    <string name="ad">广告</string>
    <string name="info_price">收费金额</string>
    <string name="count_price">合计：</string>
    <string name="pay_way">支付方式</string>
    <string name="payment">支付金额:</string>
    <string name="zi_fu_bao">支付宝支付</string>
    <string name="wei_xing">微信支付</string>
    <string name="social_security">社保支付</string>
    <string name="advice_info">处方信息</string>
    <string name="record_one">第一份病历</string>
    <string name="record_two">第二份病历</string>
    <string name="history_record">历史就诊信息</string>
    <string name="my_login">点击登录</string>
    <string name="my_point">我的预约</string>
    <string name="packag_history">打包历史</string>
    <string name="my_record">我的病历</string>
    <string name="my_visit">我的复诊</string>
    <string name="my_orders">商品订单</string>
    <string name="my_pay">支付订单</string>
    <string name="my_follow">我的关注</string>
    <string name="account_set">账号设置</string>
    <string name="inquiry_pay">咨询定价</string>
    <string name="record_upload">上传病历至服务器</string>
    <string name="down_record">从服务端病历下载</string>
    <string name="address_set">地址设置</string>
    <string name="clean_cache">清除缓存</string>
    <string name="user_fade">用户反馈</string>
    <string name="about_us">关于我们</string>
    <string name="suggest_submit">意见反馈</string>
    <string name="current_version">当前版本</string>
    <string name="check_info">请务必填写真实信息,您的信息我们将严格保密</string>
    <string name="account">账号</string>
    <string name="acount_edit">请输入您的账号</string>
    <string name="your_name">姓名</string>
    <string name="your_name_edit">请输入您的姓名</string>
    <string name="identity">身份证(可选)</string>
    <string name="identity_edit">请输入您的证件号码</string>
    <string name="submit">提交</string>
    <string name="change_icon">点击修改头像</string>
    <string name="identify">实名认证</string>
    <string name="change_pwd">修改密码</string>
    <string name="pwd_txt">请设置新的密码</string>
    <string name="pwd">新密码</string>
    <string name="new_pwd">确认新密码</string>
    <string name="letter_or_num">6-20位字母,数字或符号</string>
    <string name="qq_num">qq号码</string>
    <string name="phone_num">电话号码</string>
    <string name="user_fade_txt">请留下你的宝贵意见</string>
    <string name="confirm_dialog_btn">确定</string>
    <string name="cancel_dialog_btn">取消</string>
    <string name="my_qr">我是"朱家斌"医生,这是我的二维码</string>
    <string name="my_qr_txt">请对准扫描</string>
    <string name="go_zip_path">点击图片进入压缩包所在文件夹 </string>
    <string name="chat_pay">聊天咨询收费</string>
    <string name="record_pay">病历咨询收费</string>
    <string name="pay_unit">元</string>
    <string name="not_pay">收费</string>
    <string name="already_pay">已收费</string>
    <string name="next_step">下一步</string>
    <string name="send">发 送</string>
    <string name="reply">回复</string>
    <string name="revisit">咨询</string>
    <string name="whether_to_save">是否保存?</string>
    <string name="whether_to_video_advice">是否为该视频添加描述内容?</string>
    <string name="whether_to_audio_advice">是否为该音频添加描述内容?</string>
    <string name="other_record">其他病历</string>
    <string name="revisiting">进行中</string>
    <string name="revisited">已结束</string>
    <string name="inquery_answer">答案:</string>
    <string name="inquery_one">问题一:</string>
    <string name="answer_one">答案一:</string>
    <string name="inquery_two">问题二:</string>
    <string name="answer_two">答案二:</string>
    <string name="inquery_three">问题三:</string>
    <string name="answer_three">答案三:</string>
    <string name="communication_review">通讯复诊</string>
    <string name="graphic_text_review">图文复诊</string>
    <string name="title_activity_scan_qr_code">扫一扫</string>
    <string name="close">关闭</string>
    <string name="auto_scan_notification">将扫描内容放入框内，即可自动扫描</string>
    <string name="notification">提示</string>
    <string name="positive_button_confirm">确认</string>
    <string name="could_not_read_qr_code_from_scanner">对不起，无法打开扫出的内容</string>
    <string name="camera_not_found">未检测到相机</string>
    <string name="is_open_flashlight">是否打开闪光灯 </string>
    <string name="pay_text">请确认支付你的咨询费用(咨询费用由第三方保管,咨询成功后会自动支付给医生)</string>
    <string name="inquery_text">请填写您要向医生咨询的内容:</string>
    <string name="inquery_rv_info">历史就诊信息:</string>
    <string name="question_hint">详细描述您的病情状况,曾经做过的检查、用药情况，目前病情是加重还是减缓，想要获得医生什么帮助(最少输入10个字)</string>
    <string name="reply_text">咨询回复内容:</string>
    <string name="reply_hint">请填写咨询回复内容</string>
    <string name="emojicon_test_name">示例</string>
    <string name="recall">撤回</string>
    <string name="msg_recall_by_self">您撤回了一条消息</string>
    <string name="at_your_in_group">%s在群聊中@了你</string>
    <string name="focus">关注</string>
    <string name="un_focus">取消关注</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="have_connected_with">已经和对方建立连接</string>
    <string name="no_call_data">没有通话数据</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="capture_image">抓取图片</string>
    <string name="msg_recall_by_user">%1$s 撤回了一条消息</string>
</resources>