<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/appbgcolor"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/check_info"
        android:textColor="@color/text_gray_color"
        android:textSize="@dimen/text_size_14sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/account"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@android:color/white"
            android:hint="@string/acount_edit"
            android:inputType="phone"
            android:paddingLeft="10.0dip"
            android:textColor="@color/text_special_color"
            android:textColorHint="#ff999999"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14.0sp"
            android:typeface="monospace" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/your_name"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@android:color/white"
            android:hint="@string/your_name_edit"
            android:inputType="text"
            android:paddingLeft="10.0dip"
            android:textColor="@color/text_special_color"
            android:textColorHint="#ff999999"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14.0sp"
            android:typeface="monospace" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#ffffffff"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/audio_item_bg"
            android:gravity="center_vertical"
            android:text="@string/identity"
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/text_size_14sp" />

        <EditText
            android:id="@+id/identify"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:background="@android:color/white"
            android:hint="@string/identity_edit"
            android:inputType="text"
            android:paddingLeft="10.0dip"
            android:textColor="@color/text_special_color"
            android:textColorHint="#ff999999"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="14.0sp"
            android:typeface="monospace" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="43.0dip"
            android:layout_marginLeft="18.0dip"
            android:layout_marginRight="18.0dip"
            android:background="@drawable/button_selector"
            android:text="@string/submit"
            android:textColor="#ffffffff"
            android:textSize="15.0sp" />
    </RelativeLayout>
</LinearLayout>