<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/save_doc_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/save_doc_text"
        android:textColor="@color/appthemecolor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/save_doc_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="left|top"
        android:hint="@string/save_doc_advice"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:visibility="visible">

        <TextView
            android:id="@+id/confirm"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/dialog_btn_bg"
            android:gravity="center"
            android:text="@string/confirm_btn"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>